some classes added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">PK_Java_Project</string>
     <string-array name="category_array">
-        <item>Automative</item>
+        <item>Automotive</item>
         <item>Body</item>
         <item>Clothes</item>
         <item>Culture</item>
