--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PK_Java_Project</string>
+    <string name="app_name">Inwentarz</string>
     <string-array name="category_array">
         <item>Automotive</item>
         <item>Body</item>
